.kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bus-bahn-guru
  namespace: juliuste
spec:
  selector:
    matchLabels:
      app: bus-bahn-guru
  replicas: 1
  template:
    metadata:
      labels:
        app: bus-bahn-guru
    spec:
      containers:
      - name: bus-bahn-guru
        image: <IMAGE>
        ports:
        - containerPort: 3000
