.kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bus-bahn-guru-ingress
  namespace: juliuste
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "certificate-issuer"
spec:
  tls:
  - hosts:
    - bus.bahn.guru
    secretName: bus-bahn-guru-tls
  rules:
  - host: bus.bahn.guru
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: bus-bahn-guru
            port:
              number: 80
